--- a/index.html
+++ b/index.html
@@ -1,21 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin Fashion</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+        .font-roboto {
+            font-family: "Roboto", sans-serif;
+        }
+
+        .font-bebas-neue {
+            font-family: "Bebas Neue", sans-serif;
+        }
+    </style>
+
 </head>
-<body>
-    <header>
+
+<body class="font-roboto">
+    <header class="bg-[#FFFBF0] px-4">
         <nav>
 
         </nav>
-        <div class="banner">
-
+        <div class="md:flex md:justify-evenly md:items-center">
+            <div>
+                <h1 class="text-7xl uppercase">
+                    <span class="text-orange-400">Be The Penguins</span>
+                    <br>
+                    <span class="text-stone-800">of Winter</span>
+                </h1>
+                <p class="font-bebas-neue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+                    voluptatibus adipisci vitae veniam
+                    quo minus officiis expedita debitis explicabo corporis.</p>
+                <button
+                    class="bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6 inline fill-white">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                    </svg>
+                    BUY NOW</button>
+            </div>
+            <div>
+                <img src="/images/model.png" alt="Model">
+            </div>
         </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <section class="my-16 mx-4 px-4">
+            <h1 class="uppercase text-center text-5xl text-[#363958] font-bebas-neue md:text-left">WoMan Jacket</h1>
+            <div class="my-5 md:grid md:grid-cols-3 space-y-4">
+                <div class="p-6 shadow-xl rounded-3xl">
+                    <img src="images/jacket-1.png" alt="jacket-1" class="bg-[#F1F1F1] rounded-3xl my-4 py-4 px-1">
+                    <h3 class="uppercase text-3xl text-[#363958] my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] my-3">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6 inline fill-white">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
+                    </div>
+                </div>
+                <div class="p-6 shadow-xl rounded-3xl">
+                    <img src="images/jacket-2.png" alt="jacket-1" class="bg-[#F1F1F1] rounded-3xl my-4 py-4 px-1">
+                    <h3 class="uppercase text-3xl text-[#363958] my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] my-3">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6 inline fill-white">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
+                    </div>
+                </div>
+                <div class="p-6 shadow-xl rounded-3xl">
+                    <img src="images/jacket-3.png" alt="jacket-1" class="bg-[#F1F1F1] rounded-3xl my-4 py-4 px-1">
+                    <h3 class="uppercase text-3xl text-[#363958] my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] my-3">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6 inline fill-white">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="my-16 mx-4 px-4">
+            <h1 class="uppercase text-center text-5xl text-[#363958] font-bebas-neue md:text-left">Man Jacket</h1>
+            <div class="my-5 md:grid md:grid-cols-3 space-y-4">
+                <div class="p-6 shadow-xl rounded-3xl">
+                    <img src="images/jacket-4.png" alt="jacket-1" class="bg-[#F1F1F1] rounded-3xl my-4 py-4 px-1">
+                    <h3 class="uppercase text-3xl text-[#363958] my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] my-3">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6 inline fill-white">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
+                    </div>
+                </div>
+                <div class="p-6 shadow-xl rounded-3xl">
+                    <img src="images/jacket-5.png" alt="jacket-1" class="bg-[#F1F1F1] rounded-3xl my-4 py-4 px-1">
+                    <h3 class="uppercase text-3xl text-[#363958] my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] my-3">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6 inline fill-white">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
+                    </div>
+                </div>
+                <div class="p-6 shadow-xl rounded-3xl">
+                    <img src="images/jacket-6.png" alt="jacket-1" class="bg-[#F1F1F1] rounded-3xl my-4 py-4 px-1">
+                    <h3 class="uppercase text-3xl text-[#363958] my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] my-3">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6 inline fill-white">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="flex-col-reverse justify-between md:flex">
+                <div class="flex-col shadow-md md:flex gap-3">
+                    <img src="icons/house.png" alt="house">
+                    <div>
+                        <h3>Find the Perfect Fit</h3>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="flex-col shadow-md md:flex gap-3">
+                    <img src="icons/box.png" alt="box">
+                    <div>
+                        <h3>Free Exchanges</h3>
+                        <p>One of the many reasons you can shop
+                            with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="flex-col shadow-md md:flex gap-3">
+                    <img src="icons/question.png" alt="question">
+                    <div>
+                        <h3>Free Exchanges</h3>
+                        <p>One of the many reasons you can shop
+                            with peace of mind.</p>
+                    </div>
+                </div>
+                <img src="images/shopping.png" alt="shopping">
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
